Fix CheckStyle warnings and add TypeScript types
Co-authored-by: Jana te Kaat <jtekaat@techfak.de>
Co-authored-by: Marwa <malsulaiman@techfak.de>

refs #59668 @20m